--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,98 @@
-body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
-    "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+.master_container {
+    width: 50%;
+    height: 100%;
+    /*border: khaki 4px solid;*/
+    margin-left: 25%;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
-    monospace;
+.watchout {
+    text-align: center;
+    position: relative;
+}
+
+.left_items {
+    display: inline-block;
+    float:left;
+    text-align: center;
+}
+
+.right_items {
+    display: inline-block;
+    float: right;
+    text-align: center;
+
+}
+
+.maps_container {
+    margin-top: 10%;
+}
+
+
+.data {
+    /*border-color: darkcyan;*/
+    /*border-style: solid;*/
+
+    display: inline-block;
+    position: relative;
+    width: 100%;
+}
+
+.input_box {
+    width: 40%;
+    position: relative;
+    margin-Left: 25%;
+
+}
+
+.that_div {
+    width: 50%;
+    /*border: chartreuse 20px solid;*/
+    display: inline-block;
+    position: relative;
+    margin-left: 25%;
+}
+
+.thermometer {
+    width: 30px;
+    height: 150px;
+    display: inline-block;
+    background-color: aqua;
+    position: absolute;
+    margin-left: 30px;
+    margin-top: 10px;
+
+}
+
+.filling {
+    position: relative;
+    background-color: red;
+    height: 40%;
+    width: 100%;
+    top: 50%;
+
+}
+
+@media(max-width: 480px){
+    .maps_container {
+        left: 0;
+        margin-left: 5%;
+        margin-top: 15%;
+        position: absolute;
+    }
+    .master_container{
+        width: 100%;
+        margin-left: 0;
+        left: 0;
+        height: 100%;
+    }
+    .input_box {
+        width: 100%;
+        left: 0;
+        margin-left: 0;
+    }
+}
+
+body {
+    background-color: #2C3539;
+    color: white;
 }
