--- a/src/index.css
+++ b/src/index.css
@@ -11,6 +11,7 @@
 }
 
 .left_items {
+
     display: inline-block;
     float:left;
     text-align: center;
@@ -35,6 +36,18 @@
     display: inline-block;
     position: relative;
     width: 100%;
+    right: 70px;
+}
+
+.data_items {
+    position: relative;
+    width: 100%;
+    height: 100%;
+}
+
+.thermodiv {
+    display: inline;
+    position: absolute;
 }
 
 .input_box {
@@ -70,6 +83,19 @@
 
 }
 
+.thermobulb {
+    position: absolute;
+    top: 75%;
+    left: -8px;
+    width: 150%;
+    height: 50px;
+    background-color: red;
+    -webkit-border-radius: 100%;
+    -moz-border-radius: 100%;
+    border-radius: 100%;
+
+}
+
 @media(max-width: 480px){
     .maps_container {
         left: 0;
@@ -87,6 +113,11 @@
         width: 100%;
         left: 0;
         margin-left: 0;
+    }
+    .right_items{
+        position: absolute;
+        left: 140px;
+        text-align: center;
     }
 }
 
