--- a/src/index.css
+++ b/src/index.css
@@ -96,6 +96,15 @@
 
 }
 
+@media(max-width: 680px){
+    .right_items{
+        position: absolute;
+        left: 140px;
+        text-align: center;
+    }
+}
+
+
 @media(max-width: 480px){
     .maps_container {
         left: 0;
@@ -114,11 +123,7 @@
         left: 0;
         margin-left: 0;
     }
-    .right_items{
-        position: absolute;
-        left: 140px;
-        text-align: center;
-    }
+
 }
 
 body {
