--- a/src/index.css
+++ b/src/index.css
@@ -115,12 +115,17 @@
     }
 }
 
+#resume_container {
+    font-size: 1.2rem;
+}
+
 @media(min-width: 720px){
+    #resume_container {
+        font-size: 1.5rem;
+    }
     #resume_container {
         margin-left: 25%;
         width: 50%;
-        font-size: 1.5rem;
-
     }
 
 }
