--- a/src/index.css
+++ b/src/index.css
@@ -126,6 +126,40 @@
     color: yellow;
 }
 
+#avatar {
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+
+}
+
+#avatar_div {
+    height: 260px;
+    width: 50%;
+    /*background-color: black;*/
+    position: relative;
+    margin-left: 24%;
+    border-radius: 20%;
+    /*box-shadow: 5px 5px #1b2124;*/
+    margin-bottom: 10%;
+    margin-top: 1%;
+}
+
+#avatar_frame {
+    background-image: linear-gradient(to bottom, #44504d, #1b2124);
+    position: relative;
+    width: 30%;
+    height: 100%;
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+    border-radius: 35%;
+    padding-top: 3%;
+    border-style: solid;
+    border-width: 3px;
+    border-color: black;
+}
+
 @media(max-width: 680px){
     .right_items{
         position: absolute;
@@ -150,6 +184,12 @@
 }
 
 @media(max-width: 1000px){
+    #avatar_frame{
+        width: 100%;
+    }
+    #avatar_div{
+        margin-bottom: 200px;
+    }
     .maps_container {
         left: 0;
         margin-left: 5%;
@@ -177,6 +217,8 @@
         margin-left: 15%;
         position: relative;
     }
+
+
 }
 
 #banner {
