--- a/src/index.css
+++ b/src/index.css
@@ -1,16 +1,20 @@
+body {
+    background-color: #3f5b68;
+    color: white;
+}
+
 .master_container {
     width: 50%;
     height: 100%;
     /*border: khaki 4px solid;*/
-    margin-left: 25%;
+    margin: auto;
+    text-align: center;
 }
 .master_container h1 {
-    margin-left: 25%;
     position: relative;
 }
 
 .main_buttons {
-    margin-left: 23%;
     position: relative;
 }
 
@@ -254,9 +258,4 @@
     display: inline;
     padding: 10px;
     font-size: 20px;
-}
-
-body {
-    background-color: #3f5b68;
-    color: white;
 }
