--- a/src/index.css
+++ b/src/index.css
@@ -89,7 +89,7 @@ body {
     height: 30%;
     display: inline-block;
     position: relative;
-    background-color: black;
+    background-color: #13151d;
     border-radius: 30px;
 }
 
@@ -97,7 +97,7 @@ body {
     width: 30px;
     height: 150px;
     display: inline-block;
-    background-color: aqua;
+    background-color: #37bcd7;
     position: absolute;
     margin-left: 30px;
     margin-top: 10px;
@@ -165,6 +165,22 @@ body {
     border-style: solid;
     border-width: 3px;
     border-color: black;
+}
+
+.dropdown_menu {
+    background: #8f9fa3;
+    color: white;
+    position: absolute;
+    right: 10px;
+    bottom: 10px;
+    height: auto;
+    width: 200px;
+    border-radius: 10px;
+
+}
+
+.dropdown_menu h2 {
+    margin-left: 5%;
 }
 
 @media(max-width: 680px){
@@ -236,7 +252,7 @@ body {
         width: 100%;
         margin-left: 0;
         left: 0;
-        height: 100%;
+        height: 1vh;
     }
     .input_box {
         width: 100%;
