--- a/src/index.css
+++ b/src/index.css
@@ -99,7 +99,6 @@ body {
     display: inline-block;
     background-color: #37bcd7;
     position: absolute;
-    margin-left: 30px;
     margin-top: 10px;
 
 }
@@ -252,8 +251,13 @@ body {
         width: 100%;
         margin-left: 0;
         left: 0;
-        height: 1vh;
+        height: 100%;
     }
+
+    .master_container h2 {
+        font-size: 14px;
+    }
+
     .input_box {
         width: 100%;
         left: 0;
